tx sim UI start

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,13 @@
     <string name="label_simulate_invalid_payloads">Simulate first payload invalid</string>
     <string name="label_simulate_too_many_payloads">Simulate too many payloads</string>
 
+    <!-- Sign Transaction fragment strings -->
+    <string name="label_sign_transactions">is requesting transaction signature(s)</string>
+    <string name="label_sim_not_available">\u26A0 transaction simulation not available</string>
+    <string name="label_to_address">to address</string>
+    <string name="label_simulation_results">simulation results</string>
+    <string name="label_origin">origin</string>
+
     <!-- Send Transaction fragment strings -->
     <string name="label_requesting_transactions">is requesting transaction(s)</string>
     <string name="label_send_transactions">Sending transaction(s)</string>
