tx sim display working, needs better UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,8 @@
     <string name="label_simulate_too_many_payloads">Simulate too many payloads</string>
 
     <!-- Sign Transaction fragment strings -->
-    <string name="label_sign_transactions">is requesting transaction signature(s)</string>
+    <string name="label_sign_transactions">is requesting a transaction</string>
+    <string name="label_expected_changes">Expected Changes</string>
     <string name="label_sim_not_available">\u26A0 transaction simulation not available</string>
     <string name="label_to_address">to address</string>
     <string name="label_simulation_results">simulation results</string>
